Enable native access by default on JDK 21+ to silence startup warning
Since JDK 22, System.load() called from an unnamed module (which is how
org.jpype.jar loads its native library, being a plain jar on the
classpath) prints a "restricted method" warning unless native access is
explicitly enabled. Users had no way to suppress this short of passing
--enable-native-access themselves and knowing to do so.

startJVM() now probes the JVM shared library (via
JNI_GetDefaultJavaVMInitArgs, before the JVM is actually launched) for
JNI_VERSION_21 support as a proxy for "JDK 21+", and on such JVMs
defaults to passing --enable-native-access=ALL-UNNAMED unless the caller
already supplied their own --enable-native-access option. On older JDKs,
where the flag isn't recognized, any user-supplied
--enable-native-access option is dropped instead of becoming a hard
startup failure.

This is a minimal, native-side-only port of the JDK-version-probe
technique already validated on the experimental `reverse` branch's
larger, not-yet-ready module-path migration; it doesn't touch the
Python API or attempt the full named-module launch that branch is
working toward.

Fixes #1310.